--- a/SockConn/MainWindow.xaml
+++ b/SockConn/MainWindow.xaml
@@ -14,7 +14,7 @@
             <RowDefinition Height="26" />
         </Grid.RowDefinitions>
 
-        <ListView x:Name="lstViewConnect" Margin="5,5,7,5" Grid.Row="1">
+        <ListView x:Name="lstViewCnn" Margin="5,5,7,5" Grid.Row="1">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -48,7 +48,7 @@
             </ListView.ContextMenu>
         </ListView>
 
-        <ListView x:Name="lstViewCommand" Margin="5,5,7,5" Grid.Row="2">
+        <ListView x:Name="lstViewCmd" Margin="5,5,7,5" Grid.Row="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="ID" Width="30"
