--- a/SockMgr/SockMgrWindow.xaml
+++ b/SockMgr/SockMgrWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Class="SockMgr.SockMgrWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SockMgr" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="SockMgr" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220" />
+            <ColumnDefinition Width="260" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -19,11 +19,11 @@
         <TreeView Name="treeSock" Margin="5,37,7,5" Grid.Row="1" Grid.RowSpan="2" ItemsSource="{Binding SockTable}" PreviewMouseRightButtonDown="TreeView_PreviewMouseRightButtonDown">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Childs}">
-                    <TextBlock Text="{Binding Comment}"></TextBlock>
+                    <TextBlock Text="{Binding Title}"></TextBlock>
                     
                     <HierarchicalDataTemplate.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Comment}"></TextBlock>
+                            <TextBlock Text="{Binding Title}"></TextBlock>
                         </DataTemplate>
                     </HierarchicalDataTemplate.ItemTemplate>
                 </HierarchicalDataTemplate>
@@ -33,6 +33,10 @@
                     <MenuItem Header="connect" Click="MenuItem_Connect_Click"/>
                     <MenuItem Header="listen" Click="MenuItem_Listen_Click"/>
                     <MenuItem Header="close" Click="MenuItem_Close_Click"/>
+                    <MenuItem Header="edit" Click="MenuItem_EditSock_Click"/>
+                    <MenuItem Header="new" Click="MenuItem_NewSock_Click"/>
+                    <MenuItem Header="del" Click="MenuItem_DelSock_Click"/>
+                    <MenuItem Header="save" Click="MenuItem_SaveSock_Click"/>
                 </ContextMenu>
             </TreeView.ContextMenu>
         </TreeView>
