--- a/SockMgr/SockMgrWindow.xaml
+++ b/SockMgr/SockMgrWindow.xaml
@@ -4,7 +4,7 @@
         Title="SockMgr" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="260" />
+            <ColumnDefinition Width="270" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -30,8 +30,7 @@
             </TreeView.ItemTemplate>
             <TreeView.ContextMenu>
                 <ContextMenu StaysOpen="true">
-                    <MenuItem Header="connect" Click="MenuItem_Connect_Click"/>
-                    <MenuItem Header="listen" Click="MenuItem_Listen_Click"/>
+                    <MenuItem Header="open" Click="MenuItem_Open_Click"/>
                     <MenuItem Header="close" Click="MenuItem_Close_Click"/>
                     <MenuItem Header="edit" Click="MenuItem_EditSock_Click"/>
                     <MenuItem Header="new" Click="MenuItem_NewSock_Click"/>
