--- a/SockMgr/SockMgrWindow.xaml
+++ b/SockMgr/SockMgrWindow.xaml
@@ -68,20 +68,29 @@
 
         <GridSplitter Height="2" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
         
-        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0"></TextBox>
+        <TextBox Name="txtBoxMsg" Grid.Column="1" Grid.Row="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0"></TextBox>
 
         <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="2" VerticalAlignment="Bottom">
             <StatusBarItem>
                 <TextBlock>Ready</TextBlock>
             </StatusBarItem>
             <StatusBarItem>
-                <TextBlock x:Name="blockTimeRun"></TextBlock>
+                <TextBlock x:Name="txtTimeRun"></TextBlock>
             </StatusBarItem>
             <StatusBarItem>
-                <TextBlock x:Name="blockMemory">0</TextBlock>
+                <TextBlock x:Name="txtMemory">0</TextBlock>
             </StatusBarItem>
             <StatusBarItem>
-                <TextBlock x:Name="blockMemoryDiff" Width="40">0</TextBlock>
+                <TextBlock x:Name="txtMemoryDiff" Width="40">0</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="currentAcceptCount">0</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="historyAcceptOpenCount">0</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="historyAcceptCloseCount">0</TextBlock>
             </StatusBarItem>
         </StatusBar>
     </Grid>
