--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:StationConsole"
-        Title="MainWindow" Height="576" Width="1024" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+        Title="MainWindow" Height="576" Width="1024" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Window.Resources>
         <local:ClientStateTable x:Key="clientStateTable"></local:ClientStateTable>
             <CollectionViewSource x:Key='clients' Source="{Binding Source={StaticResource clientStateTable}}">
