--- a/EnvModule/App.xaml
+++ b/EnvModule/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="EnvModule.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="EnvModuleWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
