--- a/SockMaster/SockMasterWindow.xaml
+++ b/SockMaster/SockMasterWindow.xaml
@@ -1,21 +1,27 @@
 ﻿<Window x:Class="SockMaster.SockMasterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SockMaster" Height="540" Width="960" WindowStartupLocation="CenterScreen">
+        Title="SockMaster" Height="540" Width="960" WindowStartupLocation="CenterScreen" MinWidth="960" MinHeight="540">
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="270" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="252*" />
+            <ColumnDefinition Width="686*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="8" />
             <RowDefinition Height="161*" />
-            <RowDefinition Height="306" />
+            <RowDefinition Height="306*" />
             <RowDefinition Height="26" />
         </Grid.RowDefinitions>
 
-        <TextBlock Text="SockMaster ~ Mnn" Margin="5,5,5,120" Grid.Row="1" TextAlignment="Center" FontWeight="Bold" FontStyle="Italic" FontFamily="Palatino Linotype" FontSize="18" />
-        
+        <Grid Grid.RowSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="45" />
+                <RowDefinition Height="124*" />
+            </Grid.RowDefinitions>
+            <TextBlock Text="SockMaster ~ Mnn" Margin="39,5,5,5" FontWeight="Bold" FontStyle="Italic" FontFamily="Palatino Linotype" FontSize="18" VerticalAlignment="Center" />
+        </Grid>
+
         <TreeView Name="treeSock" Margin="5,37,7,5" Grid.Row="1" Grid.RowSpan="2" ItemsSource="{Binding SockTable}" PreviewMouseRightButtonDown="TreeView_PreviewMouseRightButtonDown" FontFamily="Consolas">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Childs}">
