--- a/SockMaster/SockMasterWindow.xaml
+++ b/SockMaster/SockMasterWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SockMaster.SockMasterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SockMaster" Height="540" Width="960" WindowStartupLocation="CenterScreen" MinWidth="960" MinHeight="540">
+        Title="SockMaster" Height="540" Width="960" WindowStartupLocation="CenterScreen">
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="252*" />
