--- a/SockMaster/SockMasterWindow.xaml
+++ b/SockMaster/SockMasterWindow.xaml
@@ -38,9 +38,11 @@
                 <ContextMenu StaysOpen="true">
                     <MenuItem Header="open" Click="MenuItem_Open_Click"/>
                     <MenuItem Header="close" Click="MenuItem_Close_Click"/>
+                    <Separator></Separator>
                     <MenuItem Header="edit" Click="MenuItem_EditSock_Click"/>
                     <MenuItem Header="new" Click="MenuItem_NewSock_Click"/>
                     <MenuItem Header="del" Click="MenuItem_DelSock_Click"/>
+                    <Separator></Separator>
                     <MenuItem Header="save" Click="MenuItem_SaveSock_Click"/>
                 </ContextMenu>
             </TreeView.ContextMenu>
@@ -64,10 +66,13 @@
             <ListView.ContextMenu>
                 <ContextMenu StaysOpen="true">
                     <MenuItem Header="send" Click="MenuItem_SendCmd_Click"/>
+                    <Separator></Separator>
                     <MenuItem Header="edit" Click="MenuItem_EditCmd_Click"/>
                     <MenuItem Header="new" Click="MenuItem_NewCmd_Click"/>
                     <MenuItem Header="del" Click="MenuItem_DelCmd_Click"/>
+                    <Separator></Separator>
                     <MenuItem Header="open" Click="MenuItem_OpenCmd_Click"/>
+                    <Separator></Separator>
                     <MenuItem Header="save" Click="MenuItem_SaveCmd_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
